WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75084
Crash when trying to navigate to a data: URL in MiniBrowser on Windows
https://bugs.webkit.org/show_bug.cgi?id=75084
Summary
Crash when trying to navigate to a data: URL in MiniBrowser on Windows
Adam Roben (:aroben)
Reported
2011-12-22 06:53:36 PST
Crash when trying to navigate to a data: URL in MiniBrowser on Windows
Attachments
Patch
(1.47 KB, patch)
2011-12-22 06:54 PST
,
Adam Roben (:aroben)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-12-22 06:54:02 PST
Created
attachment 120317
[details]
Patch
Adam Roben (:aroben)
Comment 2
2011-12-22 08:53:53 PST
Thanks for reviewing, Darin! Can you comment on what you'd like me to improve with this patch?
WebKit Review Bot
Comment 3
2012-01-10 13:06:16 PST
Comment on
attachment 120317
[details]
Patch Clearing flags on attachment: 120317 Committed
r104621
: <
http://trac.webkit.org/changeset/104621
>
WebKit Review Bot
Comment 4
2012-01-10 13:06:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug